# pysimulators

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  _config.yml  bento.info  bscript  hooks.py  index.html  meson.build  meson.options  params.json  pyproject.toml  setup.py
.github/workflows/: build-test-publish.yml  ci.yml  pre-commit.yml  release.yml
_layouts/: default.html
_posts/: 00-01-01-doc-discretesurface-class.textile  00-01-01-doc-layout-class.textile  13-09-05-blog-pysimulators-0.6.textile  14-01-16-blog-pysimulators-0.7.textile  14-06-06-pysimulators-1.0.textile
benchmark/: benchmark_distance.py  benchmark_geometry.py  intersection_polygons.py
credits/: index.textile
css/: screen.css
documentation/: discretesurface-class.textile  index.textile  layout-class.textile  packedtable-class.textile  scenegrid-class.textile
documentation/src/: test_scatter.py
download/: index.textile
installation/: index.textile
pysimulators/: __init__.py  __init__.py.in  acquisitionmodels.py  acquisitions.py  config.py  configurations.py  datatypes.py  datautils.py  discretesurfaces.py  geometry.py  instruments.py  layouts.py  module_datautils.f90  module_geometry.f90  module_maputils.f90  module_operators.f90.src  module_pointingmatrix.f90  module_polarization.f90.src  module_sparse.f90.src  module_wcsutils.f90  mpiutils.py  noises.py  observations.py  operators.py  planes.py  pointings.py  quantities.py  sparse.py  utils.py  warnings.py  wcsutils.py
pysimulators/interfaces/: __init__.py  madmap1.py
pysimulators/interfaces/healpy/: operators.py  scenes.py
pysimulators/interfaces/madmap1/: __init__.py  acquisition.py
pysimulators/packedtables/: core.py  layouts.py  samplings.py  scenes.py
src/: datautils.f90  datautils.f90.src  geometry.f90  meson.build  module_fitstools.f90  module_geometry.f90.src  module_math.f90  module_math.f90.src  module_math2.f90.src  module_math_old.f90  module_operators.f90.src  module_pointingmatrix.f90  module_precision.f90  module_projection.f90  module_sort.f90  module_stack.f90  module_tamasis.f90  module_wcs.f90  operators.f90.src  pointingmatrix_old.f90  projection.f90.src  sparse.f90.src
src/flib/: bi.f90.j2  datautils.f90.j2  datautils.f90.src  geometry.f90  ib.f90.j2  meson.build  module_geometry.f90.j2  module_geometry.f90.src  module_math.f90.j2  module_math.f90.src  module_math_old.f90  module_operators.f90.j2  module_pointingmatrix.f90  module_precision.f90  module_sort.f90  module_string.f90  module_wcs.f90  operators.f90.j2  pointingmatrix_old.f90  projection.f90.j2  projection.f90.src  sparse.f90.j2  sparse.f90.src  wcsutils.f90
src/pysimulators/: __init__.py  acquisitions.py  beams.py  datatypes.py  datautils.py  geometry.py  instruments.py  mpiutils.py  noises.py  operators.py  quantities.py  sparse.py  warnings.py  wcsutils.py
src/pysimulators/interfaces/: madmap1.py
src/pysimulators/interfaces/healpy/: __init__.py  operators.py  scenes.py
src/pysimulators/packedtables/: __init__.py  core.py  layouts.py  samplings.py  scenes.py
test/: common.py  test_acquisition_mpi.py  test_acquisitionmodels.py  test_acquisitions.py  test_acquisitions_mpi.py  test_beams.py  test_datatypes.py  test_datautils.py  test_discretesurfaces.py  test_geometry.py  test_healpy.py  test_instrument.py  test_layouts.py  test_layouts_mpi.py  test_madmap1.py  test_noises.py  test_observations.py  test_operators.py  test_planes.py  test_pointingmatrix.py  test_pointings.py  test_projection.py  test_quantities.py  test_scenegrid.py  test_sparse.py  test_wcsutils.py
test/data/madmap1/: invnttSpirePSW_be.0  invnttSpirePSW_be.1  invnttSpirePSW_be.10  invnttSpirePSW_be.100  invnttSpirePSW_be.1001  invnttSpirePSW_be.1002  invnttSpirePSW_be.1003  invnttSpirePSW_be.1004  invnttSpirePSW_be.1005  invnttSpirePSW_be.1006  invnttSpirePSW_be.1007  invnttSpirePSW_be.1008  invnttSpirePSW_be.101  invnttSpirePSW_be.1012  invnttSpirePSW_be.1013  invnttSpirePSW_be.1017  invnttSpirePSW_be.1018  invnttSpirePSW_be.1019  invnttSpirePSW_be.1020  invnttSpirePSW_be.1021  invnttSpirePSW_be.1024  invnttSpirePSW_be.1025  invnttSpirePSW_be.1027  invnttSpirePSW_be.1029  invnttSpirePSW_be.103  invnttSpirePSW_be.1030  invnttSpirePSW_be.1032  invnttSpirePSW_be.1035  invnttSpirePSW_be.1036  invnttSpirePSW_be.1038  invnttSpirePSW_be.1039  invnttSpirePSW_be.104  invnttSpirePSW_be.1041  invnttSpirePSW_be.1043  invnttSpirePSW_be.1044  invnttSpirePSW_be.1045  invnttSpirePSW_be.1047  invnttSpirePSW_be.1049  invnttSpirePSW_be.1051  invnttSpirePSW_be.1053  (+551 more)
test/packedtables/: test_layouts.py  test_layouts_mpi.py  test_packedtables.py  test_pointings.py  test_samplings.py
tests/: common.py  test_acquisitionmodels.py  test_acquisitions.py  test_acquisitions_mpi.py  test_beams.py  test_datatypes.py  test_datautils.py  test_geometry.py  test_healpy.py  test_instrument.py  test_madmap1.py  test_noises.py  test_observations.py  test_operators.py  test_pointingmatrix.py  test_projection.py  test_quantities.py  test_scenegrid.py  test_sparse.py  test_utils.py  test_wcsutils.py  test_wcsutils_kapteyn.py
tests/data/: header_gnomonic.fits
tests/data/madmap1/: invnttSpirePSW_be.1000  invnttSpirePSW_be.1009  invnttSpirePSW_be.1010  invnttSpirePSW_be.1011  invnttSpirePSW_be.1014  invnttSpirePSW_be.1015  invnttSpirePSW_be.1016  invnttSpirePSW_be.102  invnttSpirePSW_be.1022  invnttSpirePSW_be.1023  invnttSpirePSW_be.1026  invnttSpirePSW_be.1028  invnttSpirePSW_be.1031  invnttSpirePSW_be.1033  invnttSpirePSW_be.1034  invnttSpirePSW_be.1037  invnttSpirePSW_be.1040  invnttSpirePSW_be.1042  invnttSpirePSW_be.1046  invnttSpirePSW_be.1048  invnttSpirePSW_be.105  invnttSpirePSW_be.1050  invnttSpirePSW_be.1052  invnttSpirePSW_be.1058  invnttSpirePSW_be.1060  invnttSpirePSW_be.1063  invnttSpirePSW_be.1064  invnttSpirePSW_be.1065  invnttSpirePSW_be.1066  (+474 more)
tests/packedtables/: test_layouts.py  test_layouts_mpi.py  test_packedtables.py  test_samplings.py
tools/: build_flib.py  generate_f2py_wrappers.py  generate_fortran.py
tools/wheels/: LICENSE_osx.txt
