[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.15.0",
    "meson>=1.1.0",
    "ninja",
    "numpy>=2.0.0",
    "setuptools_scm[toml]>=6.2",
    "Jinja2>=3.0",
]

[project]
name = "pysimulators"
authors = [
    {name = "Pierre Chanial", email = "pierre.chanial@gmail.com"},
]
maintainers = [
    {name = "Pierre Chanial", email = "pierre.chanial@gmail.com"},
]
description = "Tools to build an instrument model."
readme = "README.md"
keywords = [
    "scientific computing",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Fortran",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "pyoperators[fft]>=1.0.0-beta.1",
    "astropy>=0.3.2",
    "numexpr",
    "numpy>=2.0.0",
    "scipy>=0.9",
]
dynamic = ["version"]

[project.optional-dependencies]
healpix = ["healpy"]
dev = [
    "healpy",
    "pyfftw",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-insubprocess>=1.2",
]

[project.urls]
homepage = "https://pchanial.github.io/pysimulators"
repository = "https://github.com/pchanial/pysimulators"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError:",
    "raise NotImplementedError",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.isort]
known_first_party = ["pyoperators", "pysimulators"]

[tool.pytest]
addopts = [
    "-ra",
    "--color=yes",
]
testpaths = ["tests"]
markers = [
    "mpi: mark tests to be run using mpirun.",
]

[tool.cibuildwheel]
skip = "*-musllinux_*"
test-extras = "dev"
build-verbosity = 1

[tool.setuptools_scm]
version_scheme = "post-release"
fallback_version = "0.0.0"
