[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.16.0",
    "meson>=1.3.0",
    "ninja",
    "numpy>=2.0.0",
    "setuptools_scm[toml]>=6.2",
    "Jinja2>=3.0",
]

[project]
name = "pysimulators"
authors = [
    {name = "Pierre Chanial", email = "pierre.chanial@gmail.com"},
]
maintainers = [
    {name = "Pierre Chanial", email = "pierre.chanial@gmail.com"},
]
description = "Tools to build an instrument model."
readme = "README.md"
keywords = [
    "scientific computing",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Fortran",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "pyoperators[fft]>=1.0.0-beta.1",
    "astropy>=0.3.2",
    "numexpr",
    "numpy>=2.0.0",
    "scipy>=0.9",
    "typing_extensions>=4.0; python_version<'3.11'",
]
dynamic = ["version"]

[project.optional-dependencies]
healpix = ["healpy"]
dev = [
    "healpy",
    "pyfftw",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-insubprocess>=1.2",
]

[project.urls]
homepage = "https://pchanial.github.io/pysimulators"
repository = "https://github.com/pchanial/pysimulators"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError:",
    "raise NotImplementedError",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.isort]
known_first_party = ["pyoperators", "pysimulators"]

[tool.pytest]
addopts = [
    "-ra",
    "--color=yes",
]
testpaths = ["tests"]
markers = [
    "mpi: mark tests to be run using mpirun.",
]

[tool.cibuildwheel]
skip = "*-musllinux_*"
build-verbosity = 1

[tool.cibuildwheel.macos]
# Set MACOSX_DEPLOYMENT_TARGET to match gfortran libraries (require macOS 14.0)
# Use GCC from Homebrew (not Apple Clang) so that -fopenmp works
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0", CC = "/usr/local/bin/gcc", CXX = "/usr/local/bin/g++" }

before-build = """
# Find GCC version from Homebrew (gcc installs as gcc-XX)
# Detect architecture to choose correct Homebrew prefix
if [[ "$(uname -m)" == "arm64" ]]; then
  BREW_PREFIX=/opt/homebrew
else
  BREW_PREFIX=/usr/local
fi
GCC_VERSION=$(ls $BREW_PREFIX/bin/gcc-* 2>/dev/null | grep -oE '[0-9]+$' | head -1)
if [ -n "$GCC_VERSION" ]; then
  echo "Found GCC version: $GCC_VERSION"
  # Create symlinks for gcc, g++, gfortran in /usr/local/bin
  sudo ln -sf $BREW_PREFIX/bin/gcc-$GCC_VERSION /usr/local/bin/gcc
  sudo ln -sf $BREW_PREFIX/bin/g++-$GCC_VERSION /usr/local/bin/g++
  sudo ln -sf $BREW_PREFIX/bin/gfortran-$GCC_VERSION /usr/local/bin/gfortran
else
  echo "ERROR: GCC not found!"
  exit 1
fi
gcc --version
gfortran --version
"""

[tool.setuptools_scm]
version_scheme = "post-release"
fallback_version = "0.0.0"
